# http-ai-server

./: .env  .gitignore  CMakeLists.txt  README.md  response.txt  run_all_scenarios.sh
ai/: ai_infer_service.py  app.py  requirements.txt
cert/: server.crt  server.key
config/: scheduling.json  server.json
dashboard/: app.js  dashboard_api.py  index.html  styles.css
data/logs/: analyze_log.py
data/merged/: analyze_dataset.py  queue_len.py
scripts/: adaptive_burst.lua  adaptive_full.lua  adaptive_sjf.lua  adaptive_wfq.lua  ai_predict_logger.py  analyze_advanced.py  fix_headers.sh  generate_report.py  merge_dataset.py  run_adaptive_test.sh  run_all_algos.sh  run_fifo.sh  run_rr.sh  run_sjf.sh  run_wfq.sh  workloads.sh  wrk_test.lua
scripts/dump/: test.html
scripts/lua/: adaptive_full.lua  adaptive_wave.lua
server/: CMakeLists.txt
server/include/ai/: AIClient.hpp
server/include/core/: HttpParser.hpp  HttpServer.hpp  Request.hpp  Response.hpp  Socket.hpp
server/include/monitor/: Logger.hpp  SystemMetrics.hpp
server/include/scheduler/: AdaptiveScheduler.hpp  FIFOScheduler.hpp  RRScheduler.hpp  SJFScheduler.hpp  Scheduler.hpp  SchedulerFactory.hpp  Task.hpp  WFQScheduler.hpp
server/include/threadpool/: ThreadPool.hpp
server/include/utils/: Config.cpp  Config.hpp
server/src/: main.cpp
server/src/ai/: AIClient.cpp
server/src/core/: HttpParser.cpp  HttpServer.cpp  Response.cpp  Socket.cpp
server/src/monitor/: Logger.cpp  SystemMetrics.cpp
server/src/scheduler/: AdaptiveScheduler.cpp  Scheduler.cpp  SchedulerFactory.cpp
server/src/threadpool/: ThreadPool.cpp
tests/: CMakeLists.txt  test_scheduler.cpp  test_threadpool.cpp
www/: about.html  index.html  upload.html
www/css/: style.css
www/files/: test.txt
www/js/: app.js
